0.38
 - Add Languages::all_term_languages_codes() subroutine.
 - Rewrite List::MoreUtils::none to List::Util.

0.37 2025-01-05T11:40:52+01:00
 - Error message change: Rename error message for check_language() helper.
 - Add 'ak' language code used in Q111803082.
 - Add $Wikibase::Datatype::Utils::SKIP_CHECK_LANG variable to skip check
   of Wikibase languages which are supported.
 - Add @Wikibase::Datatype::Utils::LANGUAGE_CODES variable to define user
   language codes list.
 - Remove obsolete error message in doc for check_language() helper.

0.36 2025-01-01T22:02:29+01:00
 - Error message change: Fix check of quantity upperBound and lowerBound.
   They could be same as amount. Fix errors.
 - Fixture API change: Add statement to Dog item.
 - Add new fixtures with quantity.

0.35 2025-01-01T15:09:35+01:00
 - Update Wikibase content language codes.
 - Update copyright years.
 - Update mediawiki language codes.

0.34 2024-11-10T17:03:15+01:00
 - Add tests.
 - Update copyright years.

0.33 2023-11-02T10:58:56+01:00
 - Add fixtures with tests and examples.
 - Regen examples.
 - Update Wikibase::Datatype doc.

0.32 2023-10-27T20:25:33+02:00
 - Add Wikibase::Datatype::Value::Lexeme.
 - Add fixtures for statement of given name with Michal value.
 - Add missing Sense to Value doc.
 - Improve doc comments.
 - Improve Wikibase::Datatype::Utils SEE ALSO section in doc.
 - Update Module::Install to 1.21.

0.31 2023-04-27T15:00:16+02:00
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::DouglasAdams.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::MediainfoSnak::Commons::Depicts::Human.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Property::Wikidata::InstanceOf.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Sense::Wikidata::Dog.
 - Add SEE ALSO link to Wikibase::Datatype::Snak.